trustfall_core/src/resources/test_data/valid_queries/implicit_null_for_nullable_edge_parameter.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    NumberImplicitNullDefault(max: 1) {
        value @output
    }
}"#,
    arguments: {},
)
