trustfall_core/src/resources/test_data/parse_errors/invalid_edge_argument.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: { x: "y" }) {
        value @output
    }
}"#,
    arguments: {},
)
